syntax = "proto3";

package arrow.common;

// Output payload type for Arrow-based stages.
enum OutputType {
  OUTPUT_TYPE_TABLE = 0;
  OUTPUT_TYPE_RECORD_BATCH = 1;
}

// Filesystem selection for Arrow-based stages.
enum FileSystem {
  FILE_SYSTEM_AUTO = 0;
  FILE_SYSTEM_LOCAL = 1;
  FILE_SYSTEM_S3 = 2;
  FILE_SYSTEM_GCS = 3;
  FILE_SYSTEM_HDFS = 4;
}

// Arrow Supported compressions
enum Compression {
  COMPRESSION_AUTO = 0;
  COMPRESSION_UNCOMPRESSED = 1;
  COMPRESSION_SNAPPY = 2;
  COMPRESSION_GZIP = 3;
  COMPRESSION_BROTLI = 4;
  COMPRESSION_ZSTD = 5;
  COMPRESSION_LZ4 = 6;
  COMPRESSION_LZ4_FRAME = 7;
  COMPRESSION_LZO = 8;
  COMPRESSION_BZ2 = 9;
}

message Common  {
  // Filesystem selection
  arrow.common.FileSystem filesystem = 4;

  // Compression selection
  arrow.common.Compression compression = 5;
}